# Rtrc

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  SetupDependencies.bat  xmake.lua
Samples/: CMakeLists.txt
Samples/01.TexturedCube/: Main.cpp
Samples/01.TexturedQuad/: CMakeLists.txt  Main.cpp  Quad.material  Quad.shader
Samples/02.ComputeShader/: CMakeLists.txt  Compute.shader  Main.cpp
Samples/03.AliasedRenderTexture/: CMakeLists.txt  Main.cpp
Samples/03.BindlessTexture/: Bindless.material  Bindless.shader  Main.cpp
Samples/03.DeferredShading/: CMakeLists.txt  Main.cpp
Samples/04.BindlessTexture/: Main.cpp
Samples/04.RayTracingTriangle/: Main.cpp  RayTracingTriangle.shader
Samples/05.PathTracing/: InitRng.shader  Main.cpp  PathTracing.shader
Samples/05.RayTracingTriangle/: Main.cpp
Samples/06.BasicRenderLoop/: Main.cpp  StandaloneApplication.cpp  StandaloneApplication.h
Samples/06.DistortionFreeDisplacementMap/: Grid.shader  Main.cpp
Samples/06.PathTracing/: Main.cpp
Samples/07.Application/: Main.cpp
Samples/07.Gizmo/: Main.cpp
Samples/08.FADM/: Common.h  FADM.shader  GridAlignment.cpp  GridAlignment.h  Main.cpp  Mesh.cpp  Mesh.h  SeamEnergy.cpp  SeamEnergy.h  VDMBake.cpp  VDMBake.h
Samples/09.MeshShader/: Main.cpp  UniformGrid.shader
Samples/10.FastMarchingMethod/: Main.cpp  Visualize.shader
Samples/11.GeodesicDistance/: Main.cpp  Visualize.shader
Samples/12.ShaderDSL/: Main.cpp
Samples/13.HorizonShadowMap/: Bake.shader  Main.cpp  Render.shader
Samples/14.HalfedgeMesh/: DrawMesh.shader  Main.cpp
Samples/15.HeatMethod/: Main.cpp  Visualize.shader
Samples/16.MeshCorefinement/: Main.cpp
Samples/17.WorkGraph/: Main.cpp  WorkGraph.shader
Samples/18.ShortestGeodesicPath/: Main.cpp
Samples/19.Archive/: Main.cpp
Samples/20.MultiLayerOIT/: Main.cpp  OIT.shader
Samples/21.HeightMapDownsampling/: Common.h  Downsampler.cpp  Main.cpp
Samples/22.DynamicDiscreteDistribution/: Main.cpp
Samples/HelloWorld/: CMakeLists.txt  HelloWorld.frag  HelloWorld.vert  Main.cpp
Samples/Test.LIP/: Main.cpp  Shader.shader
Samples/Test.OT2D/: Main.cpp
Source/Graphics/: CMakeLists.txt
Source/Graphics/Device/: AccelerationStructure.cpp  AccelerationStructure.h  BindingGroup.cpp  BindingGroup.h  BindingGroupDSL.h  BindingGroupStruct.h  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CopyContext.cpp  CopyContext.h  Device.cpp  Device.h  DeviceSynchronizer.cpp  DeviceSynchronizer.h  GeneralGPUObject.h  LocalBindingGroupLayoutCache.h  MeshLayout.cpp  MeshLayout.h  Pipeline.cpp  Pipeline.h  Queue.h  RGResourceForward.cpp  RGResourceForward.h  Sampler.h  Texture.h
Source/Graphics/ImGui/: Instance.cpp  Instance.h
Source/Graphics/Misc/: PipelineCache.cpp  PipelineCache.h  ShaderBindingTableBuilder.cpp  ShaderBindingTableBuilder.h
Source/Graphics/RenderGraph/: Compiler.cpp  Compiler.h  Executable.cpp  Executable.h  Graph.cpp  Graph.h  Label.h  Pass.cpp  Pass.h  Resource.cpp  Resource.h  UseInfo.h
Source/Graphics/Shader/: Compiler.cpp  Compiler.h  D3D12Reflection.cpp  D3D12Reflection.h  DXC.cpp  Keyword.h  RegisterAllPreprocessedShaders.inl  SPIRVReflection.cpp  SPIRVReflection.h  Shader.h  ShaderBindingNameMap.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderDatabase.cpp  ShaderDatabase.h  ShaderInfo.h  StandaloneCompiler.cpp  StandaloneCompiler.h
Source/Reflection/: CMakeLists.txt  Frontend.cpp  Frontend.h  Main.cpp  ReflectedStruct.cpp
Source/Rtrc/: CMakeLists.txt  Common.cpp  Common.h  Rtrc.h  eDSL.h
Source/Rtrc/Application/: Application.cpp  Application.h  BuiltinRenderLoopApplication.cpp  BuiltinRenderLoopApplication.h  InputManager.cpp  InputManager.h  RenderCommand.h  SimpleApplication.cpp  SimpleApplication.h
Source/Rtrc/Core/: Atomic.h  Base64.h  Bit.h  Bool.h  CMakeLists.txt  Common.cpp  Common.h  EnumFlags.h  Enumerate.h  Event.h  Hash.h  LazyCell.h  Parallel.h  PrivateBackdoor.h  Profile.h  ReflectedStruct.h  ScopeGuard.h  SelfType.h  SignalSlot.h  SourceWriter.h  String.cpp  String.h  StringPool.h  Struct.h  Swap.h  TemplateStringParameter.h  Thread.cpp  Thread.h  TimelineSemaphore.h  Timer.cpp  Timer.h  TypeIndex.h  TypeList.h  Uncopyable.h  Unreachable.h  Variant.h
Source/Rtrc/DFDM/: DFDM.cpp  DFDM.h
Source/Rtrc/Geometry/: BVH.cpp  BVH.h  CMakeLists.txt  ConstrainedTriangulation.cpp  ConstrainedTriangulation.h  DiscreteCurve.cpp  DiscreteCurve.h  DiscreteOperators.cpp  DiscreteOperators.h  DistanceField.h  Expansion.cpp  Expansion.h  FlatHalfEdgeMesh.cpp  FlatHalfEdgeMesh.h  GWN3D.cpp  GWN3D.h  GenerateMesh.cpp  GenerateMesh.h  GeodesicPath.cpp  GeodesicPath.h  HalfedgeMesh.cpp  HalfedgeMesh.h  Manifold.cpp  Manifold.h  MeshCleaner.cpp  MeshCleaner.h  MeshCorefinement.cpp  MeshCorefinement.h  Predicates.cpp  Predicates.h  RawMesh.cpp  RawMesh.h  SignpostsMesh.cpp  SignpostsMesh.h  TriangleBVH.cpp  TriangleBVH.h  TriangleTriangleIntersection.cpp  TriangleTriangleIntersection.h  Utility.h  Utility.inl
Source/Rtrc/Graphics/: CMakeLists.txt
Source/Rtrc/ImGui/: Instance.cpp  Instance.h
Source/Rtrc/Material/: GraphicsPipelineMap.h  Keyword.h  Material.cpp  Material.h  ShaderManager.cpp  ShaderManager.h  ShaderTemplate.cpp  ShaderTemplate.h
Source/Rtrc/Math/: AABB.h  Angle.h  Common.h  DistributionTransform.h  Frame.h  LowDiscrepancy.cpp  LowDiscrepancy.h  Matrix3x3.h  Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
Source/Rtrc/Mesh/: Mesh.cpp  Mesh.h  MeshLayout.cpp  MeshLayout.h
Source/Rtrc/Preprocess/: DFDM.cpp  DFDM.h  DFDM.shader
Source/Rtrc/RHI/: CMakeLists.txt  RHI.cpp  RHI.h  RHIDeclaration.h  Window.cpp  Window.h
Source/Rtrc/Reflection/: CMakeLists.txt  (+3 more)
Source/ShaderCompiler/: CMakeLists.txt  Common.h
Source/ShaderPreprocessor/: CMakeLists.txt  Main.cpp  RegisterAllPreprocessedMaterials.inl  RegisterAllPreprocessedShaders.inl  RegisterShadersAndMaterials.cpp
Source/Standalone/: CMakeLists.txt  Common.h  Main.cpp  StandaloneApplication.cpp  StandaloneApplication.h
Test/: CMakeLists.txt  Expansion.cpp  Math.cpp  Matrix3x3f.cpp  Matrix4x4f.cpp  Quaternion.cpp  Test.cpp
(+1539 files in other folders)
