CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(RTRC-SAMPLE-TEXTURED-QUAD)

ADD_EXECUTABLE(01.TexturedQuad "Main.cpp")

RTRC_SET_CXX_LANG_VERSION(01.TexturedQuad)

IF(MSVC)
    SET_PROPERTY(TARGET 01.TexturedQuad PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${RTRC_SAMPLE_WORKING_DIR}")
ENDIF()

TARGET_LINK_LIBRARIES(01.TexturedQuad PUBLIC Rtrc)
