CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(RTRC-SAMPLE-COMPUTE-SHADER)

ADD_EXECUTABLE(02.ComputeShader "Main.cpp")

RTRC_SET_CXX_LANG_VERSION(02.ComputeShader)

IF(MSVC)
    SET_PROPERTY(TARGET 02.ComputeShader PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${RTRC_SAMPLE_WORKING_DIR}")
ENDIF()

TARGET_LINK_LIBRARIES(02.ComputeShader PUBLIC Rtrc)
