CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(RTRC-SAMPLE-ALIASED-RENDER-TEXTURE)

ADD_EXECUTABLE(03.AliasedRenderTexture "Main.cpp")

RTRC_SET_CXX_LANG_VERSION(03.AliasedRenderTexture)

IF(MSVC)
    SET_PROPERTY(TARGET 03.AliasedRenderTexture PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${RTRC_SAMPLE_WORKING_DIR}")
ENDIF()

TARGET_LINK_LIBRARIES(03.AliasedRenderTexture PUBLIC Rtrc)
