CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(RTRC-SAMPLE-DEFERRED-SHADING)

ADD_EXECUTABLE(03.DeferredShading "Main.cpp")

RTRC_SET_CXX_LANG_VERSION(03.DeferredShading)

IF(MSVC)
    SET_PROPERTY(TARGET 03.DeferredShading PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${RTRC_SAMPLE_WORKING_DIR}")
ENDIF()

TARGET_LINK_LIBRARIES(03.DeferredShading PUBLIC Rtrc)
