CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(RTRC-SAMPLE-HELLO-WORLD)

ADD_EXECUTABLE(HelloWorld "Main.cpp")

RTRC_SET_CXX_LANG_VERSION(HelloWorld)

IF(MSVC)
    SET_PROPERTY(TARGET HelloWorld PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${RTRC_SAMPLE_WORKING_DIR}")
ENDIF()

TARGET_LINK_LIBRARIES(HelloWorld PUBLIC Rtrc)

#RTRC_COMPILE_GLSL_TO_SPV(
#    "${CMAKE_CURRENT_SOURCE_DIR}/HelloWorld.vert"
#    "${RTRC_SAMPLE_WORKING_DIR}/Asset/HelloWorld/HelloWorld.vert.spv")
#
#RTRC_COMPILE_GLSL_TO_SPV(
#    "${CMAKE_CURRENT_SOURCE_DIR}/HelloWorld.frag"
#    "${RTRC_SAMPLE_WORKING_DIR}/Asset/HelloWorld/HelloWorld.frag.spv")
