CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(RTRC-SAMPLE-HELLO-WORLD)

ADD_EXECUTABLE(HelloWorld "Main.cpp")

RTRC_SET_CXX_LANG_VERSION(HelloWorld)

IF(MSVC)
    SET_PROPERTY(TARGET HelloWorld PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${RTRC_SAMPLE_WORKING_DIR}")
ENDIF()

TARGET_LINK_LIBRARIES(HelloWorld PUBLIC Rtrc)
